src-tauri/error.log
    Checking launch-deck v0.1.0 (C:\Users\ohirs\OneDrive\Documents\Visual Studio Projects\launch-deck\src-tauri)
error[E0255]: the name `__cmd__get_game_data` is defined multiple times
   --> src\main.rs:199:14
    |
198 | #[tauri::command]
    | ----------------- previous definition of the macro `__cmd__get_game_data` here
199 | pub async fn get_game_data(query: String) -> Result<GameData, String> {
    |              ^^^^^^^^^^^^^ `__cmd__get_game_data` reimported here
    |
    = note: `__cmd__get_game_data` must be defined only once in the macro namespace of this module

warning: unused import: `pelite::resources::version_info::VersionInfo`
 --> src\scanner.rs:6:5
  |
6 | use pelite::resources::version_info::VersionInfo;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0255`.
warning: `launch-deck` (bin "launch-deck") generated 1 warning
error: could not compile `launch-deck` (bin "launch-deck") due to 1 previous error; 1 warning emitted
